debug模式修复